# libczi-vcpkg-test

./: .gitignore  CMakeLists.txt  C_MakeLists.txt  build-static.bat  build.bat  build.sh  main.cpp  run_test.sh  vcp___kg.json
.github/workflows/: build.yml
tests/: vcpkg-triplets.sh
tests/azuresdk_and_curl_test/: CMakeLists.txt  execute_test.sh  main.cpp
tests/azuresdk_test/: CMakeLists.txt  execute_test.sh  main.cpp
tests/curl_test/: CMakeLists.txt  execute_test.sh  main.cpp
tests/jxrlib_coexistence/: CMakeLists.txt  CMakeSettings.json  execute_test.sh  main.cpp
tests/pugixml_coexistence/: CMakeLists.txt  CMakeSettings.json  execute_test.sh  main.cpp
tests/simple/: CMakeLists.txt  CMakeSettings.json  _vcpkg-configuration.json  main.cpp
tests/simple/.github/workflows/: build.yml
